--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,9 @@
 </head>
 <body>
 
+  padding-top: constant(safe-area-inset-top); /* iOS 11.0 */
+  padding-top: env(safe-area-inset-top); /* iOS 11.2 */
+
   <!-- Ionic's root component and where the app will load -->
   <ion-app></ion-app>
 
