--- a/src/core/grades/pages/coursesplit/coursesplit.html
+++ b/src/core/grades/pages/coursesplit/coursesplit.html
@@ -3,7 +3,7 @@
         <ion-title>{{ 'core.grades.grades' | translate }}</ion-title>
     </ion-navbar>
 </ion-header>
-<core-split-view>
+<core-split-view dir="ltr">
     <core-grades-course class="core-avoid-header" [courseId]="courseId" [userId]="userId" [gradeId]="gradeId"></core-grades-course>
 </core-split-view>
 
